--- a/WebMatrixExample/Views/Home/Index.cshtml
+++ b/WebMatrixExample/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body>
     <form method="post" action="/account/logout">
-        <h1>Welcome <%= WebSecurity.CurrentUserName %>!</h1>
+        <h1>Welcome @(WebSecurity.CurrentUserName)</h1>
         <input type="submit" value="Logout" />
     </form>
 </body>
